Small front end correction on mobile

--- a/frontEnd/src/styles.css
+++ b/frontEnd/src/styles.css
@@ -49,6 +49,9 @@ app-menu {
         height: auto;
     }
     .router {
-        padding: 2em 2em 0;
+        /* padding: 2em 2em 0; */
+        position: initial!important;
+        width: 100%;
+        padding: 5em 2em 0;
     }
 }
